# FOE

./: .gitignore  CMakeLists.txt  FOE.pro  Versions.txt  foe_clan.ui  foe_da_DK.ts  foe_main.cpp  foe_main.h  foe_main.ui  foeages.cpp  foeages.h  foeclan.cpp  foeclan.h  foeconnectiondetails.cpp  foeconnectiondetails.h  foeconnectiondetails.ui  foedatamanger.cpp  foedatamanger.h  foegoods.cpp  foegoods.h  foeoverviewmodel.cpp  foeoverviewmodel.h  foeproduct.cpp  foeproduct.h  foeuser.cpp  foeuser.h  foeusereditdlg.cpp  foeusereditdlg.h  foeusereditdlg.ui  goods.qrc  main.cpp  products.qrc
include/: actionhelpers.h  datasharingdlg.h  foe_main.h  foeages.h  foeclan.h  foedatamanger.h  foegoods.h  foeoverviewmodel.h  foepersistence.h  foeuser.h  foeusereditdlg.h
libpusher/: CMakeLists.txt  Makefile  main.cpp  pusher.cpp  pusher.h  pusher_p.h
resources/: goods.qrc
scripts/: FOE.nsi  create_installer.sh  createdb.sh  deploy.sh  foe.sql  send_release_notes.sh
src/: actionhelpers.cpp  datasharingdlg.cpp  foe_main.cpp  foeages.cpp  foeclan.cpp  foeconnectiondetails.cpp  foedatamanger.cpp  foegoods.cpp  foeoverviewmodel.cpp  foepersistence.cpp  foeuser.cpp  foeusereditdlg.cpp
src/remote/: foepusher.cpp  foepusher.h
translations/: foe_da_DK.ts
ui/: datasharingdlg.ui  foe_clan.ui  foe_main.ui  foeusereditdlg.ui
